--- a/.github/workflows/update-leaderboard.yml
+++ b/.github/workflows/update-leaderboard.yml
@@ -2,29 +2,35 @@ name: Update Leaderboard
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/15 * * * *'  # Каждые 15 минут (чтобы не перегружать)
   workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
+    timeout-minutes: 5  # Максимум 5 минут на выполнение
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+          
       - name: Install dependencies
         run: npm install airtable
+        
       - name: Update leaderboard
         env:
           AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
         run: node update_leaderboard.js
+        
       - name: Commit and push
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add leaderboard.json
-          git commit -m "Auto-update leaderboard" || exit 0
-          git push
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Auto-update leaderboard"
+          file_pattern: 'leaderboard.json'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
